dataset1235/2025-2/805158916/users/3920620008/executions/2651470117_3455942218.log
== SUBMISSION (2025-08-21 17:05:18)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = x1*8+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(roud(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 17:05:14)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = x1*8+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(roud(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 17:05:41)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = x1*8+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(roud(total,1))
print(round(saldo,1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
File "XXXX", line 11
    print(round(saldo,1)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:07:06)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (x1*8)+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(round(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 17:02:10)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = x1*8+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(total)
print(saldo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.399999999999999
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 17:06:01)
-- CODE: 

x1= float(input("Qual o valor unitario do jogo? "))
x2= float(input("Qual o valor diposnivel para a aquisicao dos jogos? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (x1*8)+45
saldo = x2-total

# Impressao do valor total e do saldo:
print(roud(total,1))
print(round(saldo,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(roud(total,1))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
